    Dirlist confusion on linux development builds causing wrong skip files output (#265)

--=============================( SLFTP v1.5.8 )===================================-
    {+} Reverse FXP can be enabled by command !reversefxp
    {#} Fix 'No such directory' error flood if a subdir was deleted during a race (#200)

--=============================( SLFTP v1.5.7 )===================================-
    {+} FastMM5 memory manager with better multithreading scaling for Windows (https://github.com/pleriche/FastMM5)
    {+} SynFPCx64MM memory manager with better multithreading scaling for x86_64
        (http://blog.synopse.info/post/2020/05/07/New-Multi-thread-Friendly-Memory-Manager-for-FPC-written-in-x86_64-assembly)
    {+} Default C memory manager for other 32-bit unix targets (https://www.freepascal.org/docs-html/current/rtl/cmem/index.html)
    {+} New rule mvidlookupdone - needed for genre, filecount, ntsc and pal rule
    {+} Catchadd command now accepts event type ADDPRE which can be used to fill your pre database using the precatcher
    {#} Relogin of slots didn't bring up all slots as intended
    {#} announce_event for precatcher from spam config never worked
    {#} Fix issue with messed up working directory on drftpd sites which would cause races to fail
    {#} Fix wrong or no [SITE FAILED] message was shown if a race failed on a site
    {#} Backup causes access violation if stats db is disabled but a stats db file exists
    {#} Possibility for deadlock due to irc_message_lock and pending_messages_queue lock
    {#} Fix queue bloat issue with race task being recreated over and over again for a specific site
    {#} Sometimes files that should have been skipped were transfered anyway
    {#} Fix some queue sorting issues for NFO, SFV and subdir priority settings
    {#} mp3numdisks took the wrong value, e.g. VA-Serious_Beats_92-(541833CD)-4CD-FLAC-2019-WRE
    {#} Fix some dirlist related access violations